<resources>
    <string name="app_name">Finders Keepers</string>
    <string name="action_settings">Settings</string>
    <string name="action_browse_items">Browse Items</string>
    <string name="action_view_trades">View Trades</string>
    <string name="action_user_page">User Page</string>

    <string name="user_name">username</string>
    <string name="user_items_text">Your Inventory</string>
    <string name="user_tags_text">Your Wishlist</string>
    <string name="user_wishlist_text">Your Wishlist</string>
    <string name="title_activity_sign_in">Finders Keepers</string>
    <string name="sign_in_text">Sign In</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="enter_zip_text">Enter ZIP Code</string>
    <string name="set_zip_button_text">Set ZIP Code</string>
    <string name="tag_add">Add Tags</string>
    <string name="new_tag">New Tag</string>
    <string name="item_add_tags_hint">Tags Separated By Spaces</string>
    <string name="change_avatar_text">Change image</string>
    <string name="update_button_text">Save changes</string>
    <string name="title_activity_view_item">ViewItemActivity</string>
    <string name="delete_item_text">Delete Item</string>
    <string name="update_tags_text">Update Wishlist</string>
    <string name="wishlist_tags_hint">Enter some item tags</string>
    <string name="title_activity_browse_nearby">BrowseNearby</string>
    <string name="browse_nearby_users_text">Browse Nearby Users</string>
    <string name="action_browse_users">Browse Users</string>
    <string name="title_activity_other_user_page">OtherUserPageActivity</string>
    <string name="other_user_items_text">User\'s Items</string>
    <string name="other_user_tags_text">User\'s Tags</string>
    <string name="title_activity_other_user_item_view">OtherUserItemViewActivity</string>
    <string name="view_tags">Tags</string>
    <string name="propose_trade_text">Propose Trade</string>
    <string name="title_activity_propose_trade">ProposeTradeActivity</string>
    <string name="this_user_items_text">Your Items</string>
    <string name="this_user_selected_items_text">Your Chosen Items</string>
    <string name="their_items_text">Their Items</string>
    <string name="their_selected_items_text">Their Chosen Items</string>
    <string name="send_trade_text">Send Trade Request</string>
    <string name="title_activity_view_trades">ViewTradesActivity</string>
    <string name="incoming_trades_text">Incoming Trades</string>
    <string name="outgoing_trades_text">Outgoing Trades</string>
    <string name="completed_trades_text">Completed Trades</string>
    <string name="title_activity_view_user_trade">ViewUserTradeActivity</string>
    <string name="accept_trade_text">Accept Trade</string>
    <string name="reject_trade_text">Reject Trade</string>
    <string name="trade_view_your_items_text">Your Items</string>
    <string name="trade_view_their_items_text">Their Items</string>
    <string name="rejected_trades_text">Rejected Trades</string>
    <string name="trade_initiator_text">Trade Initiated By</string>
    <string name="initiator_placeholder">username</string>
    <string name="trade_status_text">Trade Status:</string>
    <string name="status_placeholder">Incoming</string>
    <string name="view_other_text">View Other User\'s Profile</string>
    <string name="send_mail_text">Send Email to User</string>
</resources>
