<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_user_trade"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="70dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse403.finderskeepers.ViewUserTradeActivity"
    tools:showIn="@layout/activity_view_user_trade">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="30sp"
        android:text="@string/trade_view_your_items_text"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/your_items_view"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/your_items_list">
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textSize="30sp"
        android:text="@string/trade_view_their_items_text"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/their_item_view"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/their_item_list">
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/accept_trade_text"
        android:id="@+id/accept_trade"
        android:layout_weight=".5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/reject_trade_text"
        android:id="@+id/reject_trade"
        android:layout_weight=".5"/>

</LinearLayout>
